data/derived/sp14/progs/unify/prog3767.ml.out
Characters 77-86:
  |_ -> clone (x (n-1)) @  [x];;
              ^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         int -> 'a
       The type variable 'a occurs inside int -> 'a
